--- a/finetuning_llm_models.ipynb
+++ b/finetuning_llm_models.ipynb
@@ -25,7 +25,25 @@
         "outputId": "4beb3074-cb27-4ac6-f17b-3dbca74ba793"
       },
       "outputs": [
-    
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting gradientai\n",
+            "  Downloading gradientai-1.3.0-py3-none-any.whl (169 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m169.7/169.7 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting aenum>=3.1.11 (from gradientai)\n",
+            "  Downloading aenum-3.1.15-py3-none-any.whl (137 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m137.6/137.6 kB\u001b[0m \u001b[31m16.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pydantic<2.0.0,>=1.10.5 in /usr/local/lib/python3.10/dist-packages (from gradientai) (1.10.13)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from gradientai) (2.8.2)\n",
+            "Requirement already satisfied: urllib3>=1.25.3 in /usr/local/lib/python3.10/dist-packages (from gradientai) (2.0.7)\n",
+            "Requirement already satisfied: typing-extensions>=4.2.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<2.0.0,>=1.10.5->gradientai) (4.5.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->gradientai) (1.16.0)\n",
+            "Installing collected packages: aenum, gradientai\n",
+            "Successfully installed aenum-3.1.15 gradientai-1.3.0\n"
+          ]
+        }
       ],
       "source": [
         "!pip install gradientai --upgrade"
@@ -100,7 +118,21 @@
       },
       "execution_count": null,
       "outputs": [
-       
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created model adapter with id 6c4d5888-4714-4cbc-8a38-1511e020673c_model_adapter\n",
+            "Asking: ### Instruction: Who is Krish Naik? \n",
+            "\n",
+            " ### Response:\n",
+            "Generated(before fine tuning):  Krish Naik is a well-known Indian actor, who has appeared in various films and television shows. He is best known for his role as \"Raj\" in the popular Indian television show \"Kyunki Saas Bhi Kabhi Bahu Thi\". Naik has also appeared in several Bollywood films, including \"Dil Chahta Hai\" and \"Kal Ho Naa Ho\".\n",
+            "Fine tuning the model with iteration 1\n",
+            "Fine tuning the model with iteration 2\n",
+            "Fine tuning the model with iteration 3\n",
+            "Generated(after fine tuning):  Krish is a popular YouTuber and Data Scientist. He is known for his Data Science and Python tutorials on his YouTube channel Krish Naik.\n"
+          ]
+        }
       ]
     },
     {
